# Visual-Slam-Lab

aa_utils/: CMakeLists.txt  package.xml
aa_utils/config/: MH1-Automated.yaml  MH1-sensors.yaml  MH1-sptam-1803-publisher.yaml  camData.yaml  camData_rovio.yaml
aa_utils/launch/: SPTAM-MH1-Automated.launch
aa_utils/src/: evaluate_ate.py  evaluate_rpe.py  pyreader.py  testcamera_publisher.py  ultron.py
okvis_ros/: doxygen.config
okvis_ros/okvis/: doxygen.config
okvis_ros/okvis/config/: config_fpga_p2_euroc.yaml
sptam/: package.xml
sptam/cmake-modules/: FindG2O.cmake
sptam/configurationFiles/: MH1-Automated.yaml  MH1.yaml
sptam/launch/: SPTAM-MH1-Automated.launch  SPTAM-MH1.launch
